--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="auth">Sign In</string>
     <string name="add_job_screen_route">add_job_screen</string>
     <string name="add_job">New Job</string>
+    <string name="shop_screen">shop_screen_route</string>
+    <string name="my_shops">Shops</string>
 </resources>
